Create the install log in the user's profile directory if we don't have permission to write to the program directory. [nsbeta3+ b=48225; r=ssu]